# template

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  Cargo.toml  LICENSE-MIT  Makefile  README.md  cargo-generate.toml  cliff.toml  deny.toml  rustfmt.toml
.github/workflows/: build.yml
src/: main.rs
