[package]
name = "template"
version = "0.1.1"
edition = "2024"
license = "MIT"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

[package.metadata.release]
# Message for the commit that prepares the package version
pre-release-commit-message = "chore(version): prepare version v{{version}}"

# Description/Annotation message for the Git tag being created
tag-message = "chore(version): prepare version v{{version}}"
